// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/TextInput Appearances 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "gap": "20px",
      "gridTemplateColumns": "1fr",
    }
  }
>
  <label
    className="psds-text-input"
  >
    <div
      className="psds-text-input__label psds-theme--dark psds-text-input__label"
    >
      medium default
    </div>
    <div
      className="psds-text-input__field-container"
    >
      <div
        className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
      >
        <div
          className="psds-text-input__field psds-text-input__field--appearance-default psds-theme--dark"
        >
          <input
            className="psds-theme--dark psds-text-input__field-input--appearance-default psds-text-input__field-input"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="Some placeholder"
          />
        </div>
      </div>
    </div>
    <div
      className="psds-text-input__sub-label psds-theme--dark"
    >
      The sub label
    </div>
  </label>
  <label
    className="psds-text-input"
  >
    <div
      className="psds-text-input__label psds-theme--dark psds-text-input__label"
    >
      medium subtle
    </div>
    <div
      className="psds-text-input__field-container"
    >
      <div
        className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
      >
        <div
          className="psds-text-input__field psds-text-input__field--appearance-subtle psds-theme--dark"
        >
          <input
            className="psds-theme--dark psds-text-input__field-input--appearance-subtle psds-text-input__field-input"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="Some placeholder"
          />
        </div>
      </div>
    </div>
    <div
      className="psds-text-input__sub-label psds-theme--dark"
    >
      The sub label
    </div>
  </label>
  <label
    className="psds-text-input"
  >
    <div
      className="psds-text-input__label psds-theme--dark psds-text-input__label"
    >
      small default
    </div>
    <div
      className="psds-text-input__field-container"
    >
      <div
        className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
      >
        <div
          className="psds-text-input__field psds-text-input__field--appearance-default psds-theme--dark psds-text-input--small"
        >
          <input
            className="psds-theme--dark psds-text-input__field-input--appearance-default psds-text-input__field-input"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="Some placeholder"
          />
        </div>
      </div>
    </div>
    <div
      className="psds-text-input__sub-label psds-theme--dark"
    >
      The sub label
    </div>
  </label>
  <label
    className="psds-text-input"
  >
    <div
      className="psds-text-input__label psds-theme--dark psds-text-input__label"
    >
      small subtle
    </div>
    <div
      className="psds-text-input__field-container"
    >
      <div
        className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
      >
        <div
          className="psds-text-input__field psds-text-input__field--appearance-subtle psds-theme--dark psds-text-input--small"
        >
          <input
            className="psds-theme--dark psds-text-input__field-input--appearance-subtle psds-text-input__field-input"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="Some placeholder"
          />
        </div>
      </div>
    </div>
    <div
      className="psds-text-input__sub-label psds-theme--dark"
    >
      The sub label
    </div>
  </label>
</div>
`;

exports[`Storyshots Components/TextInput Appearances With Error 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "gap": "20px",
      "gridTemplateColumns": "1fr",
    }
  }
>
  <label
    className="psds-text-input"
  >
    <div
      className="psds-text-input__label psds-theme--dark psds-text-input__label"
    >
      medium default
    </div>
    <div
      className="psds-text-input__field-container"
    >
      <div
        className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--error psds-halo--visible-on-focus"
      >
        <div
          className="psds-text-input__field psds-text-input__field--appearance-default psds-theme--dark psds-text-input__field--error"
        >
          <input
            className="psds-theme--dark psds-text-input__field-input--appearance-default psds-text-input__field-input"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="Some placeholder"
          />
        </div>
      </div>
      <div
        className="psds-text-input__error"
      >
        <div
          className="psds-icon psds-icon--size-medium"
        >
          <svg
            aria-label="warning icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              clipRule="evenodd"
              d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 2c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8zm.5 14h-1a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5zm0-4h-1a.5.5 0 0 1-.5-.5V7a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v6.5a.5.5 0 0 1-.5.5z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      className="psds-text-input__sub-label psds-theme--dark"
    >
      The sub label
    </div>
  </label>
  <label
    className="psds-text-input"
  >
    <div
      className="psds-text-input__label psds-theme--dark psds-text-input__label"
    >
      medium subtle
    </div>
    <div
      className="psds-text-input__field-container"
    >
      <div
        className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--error psds-halo--visible-on-focus"
      >
        <div
          className="psds-text-input__field psds-text-input__field--appearance-subtle psds-theme--dark psds-text-input__field--error"
        >
          <input
            className="psds-theme--dark psds-text-input__field-input--appearance-subtle psds-text-input__field-input"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="Some placeholder"
          />
        </div>
      </div>
      <div
        className="psds-text-input__error"
      >
        <div
          className="psds-icon psds-icon--size-medium"
        >
          <svg
            aria-label="warning icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              clipRule="evenodd"
              d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 2c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8zm.5 14h-1a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5zm0-4h-1a.5.5 0 0 1-.5-.5V7a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v6.5a.5.5 0 0 1-.5.5z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      className="psds-text-input__sub-label psds-theme--dark"
    >
      The sub label
    </div>
  </label>
  <label
    className="psds-text-input"
  >
    <div
      className="psds-text-input__label psds-theme--dark psds-text-input__label"
    >
      small default
    </div>
    <div
      className="psds-text-input__field-container"
    >
      <div
        className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--error psds-halo--visible-on-focus"
      >
        <div
          className="psds-text-input__field psds-text-input__field--appearance-default psds-theme--dark psds-text-input--small psds-text-input__field--error"
        >
          <input
            className="psds-theme--dark psds-text-input__field-input--appearance-default psds-text-input__field-input"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="Some placeholder"
          />
        </div>
      </div>
      <div
        className="psds-text-input__error"
      >
        <div
          className="psds-icon psds-icon--size-medium"
        >
          <svg
            aria-label="warning icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              clipRule="evenodd"
              d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 2c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8zm.5 14h-1a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5zm0-4h-1a.5.5 0 0 1-.5-.5V7a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v6.5a.5.5 0 0 1-.5.5z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      className="psds-text-input__sub-label psds-theme--dark"
    >
      The sub label
    </div>
  </label>
  <label
    className="psds-text-input"
  >
    <div
      className="psds-text-input__label psds-theme--dark psds-text-input__label"
    >
      small subtle
    </div>
    <div
      className="psds-text-input__field-container"
    >
      <div
        className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--error psds-halo--visible-on-focus"
      >
        <div
          className="psds-text-input__field psds-text-input__field--appearance-subtle psds-theme--dark psds-text-input--small psds-text-input__field--error"
        >
          <input
            className="psds-theme--dark psds-text-input__field-input--appearance-subtle psds-text-input__field-input"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="Some placeholder"
          />
        </div>
      </div>
      <div
        className="psds-text-input__error"
      >
        <div
          className="psds-icon psds-icon--size-medium"
        >
          <svg
            aria-label="warning icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              clipRule="evenodd"
              d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 2c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8zm.5 14h-1a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5zm0-4h-1a.5.5 0 0 1-.5-.5V7a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v6.5a.5.5 0 0 1-.5.5z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      className="psds-text-input__sub-label psds-theme--dark"
    >
      The sub label
    </div>
  </label>
</div>
`;

exports[`Storyshots Components/TextInput Basic 1`] = `
<label
  className="psds-text-input"
>
  <div
    className="psds-text-input__label psds-theme--dark psds-text-input__label"
  >
    The label
  </div>
  <div
    className="psds-text-input__field-container"
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
    >
      <div
        className="psds-text-input__field psds-text-input__field--appearance-default psds-theme--dark"
      >
        <input
          className="psds-theme--dark psds-text-input__field-input--appearance-default psds-text-input__field-input"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="Some placeholder"
        />
      </div>
    </div>
  </div>
  <div
    className="psds-text-input__sub-label psds-theme--dark"
  >
    The sub label
  </div>
</label>
`;

exports[`Storyshots Components/TextInput Compare Disabled 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "gap": "20px",
      "gridTemplateColumns": "1fr",
    }
  }
>
  <label
    className="psds-text-input"
  >
    <div
      className="psds-text-input__label psds-theme--dark psds-text-input__label"
    >
      Normal
    </div>
    <div
      className="psds-text-input__field-container"
    >
      <div
        className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
      >
        <div
          className="psds-text-input__field psds-text-input__field--appearance-default psds-theme--dark"
        >
          <input
            className="psds-theme--dark psds-text-input__field-input--appearance-default psds-text-input__field-input"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="I'm normal, see"
          />
        </div>
      </div>
    </div>
    <div
      className="psds-text-input__sub-label psds-theme--dark"
    >
      Still normal
    </div>
  </label>
  <label
    className="psds-text-input psds-text-input--disabled"
  >
    <div
      className="psds-text-input__label psds-theme--dark psds-text-input__label"
    >
      I'm not usable
    </div>
    <div
      className="psds-text-input__field-container"
    >
      <div
        className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
      >
        <div
          className="psds-text-input__field psds-text-input__field--appearance-default psds-theme--dark"
        >
          <input
            className="psds-theme--dark psds-text-input__field-input--appearance-default psds-text-input__field-input"
            disabled={true}
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="I'm untouchable"
          />
        </div>
      </div>
    </div>
    <div
      className="psds-text-input__sub-label psds-theme--dark"
    >
      Neither am I
    </div>
  </label>
</div>
`;

exports[`Storyshots Components/TextInput Date Input 1`] = `
<label
  className="psds-text-input"
>
  <div
    className="psds-text-input__label psds-theme--dark psds-text-input__label"
  >
    The label
  </div>
  <div
    className="psds-text-input__field-container"
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
    >
      <div
        className="psds-text-input__field psds-text-input__field--appearance-default psds-theme--dark"
      >
        <input
          className="psds-theme--dark psds-text-input__field-input--appearance-default psds-text-input__field-input"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="Some placeholder"
          type="date"
        />
      </div>
    </div>
  </div>
  <div
    className="psds-text-input__sub-label psds-theme--dark"
  >
    The sub label
  </div>
</label>
`;

exports[`Storyshots Components/TextInput Disabled 1`] = `
<label
  className="psds-text-input psds-text-input--disabled"
>
  <div
    className="psds-text-input__label psds-theme--dark psds-text-input__label"
  >
    The label
  </div>
  <div
    className="psds-text-input__field-container"
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
    >
      <div
        className="psds-text-input__field psds-text-input__field--appearance-default psds-theme--dark"
      >
        <input
          className="psds-theme--dark psds-text-input__field-input--appearance-default psds-text-input__field-input"
          disabled={true}
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="Some placeholder"
        />
      </div>
    </div>
  </div>
  <div
    className="psds-text-input__sub-label psds-theme--dark"
  >
    The sub label
  </div>
</label>
`;

exports[`Storyshots Components/TextInput Error 1`] = `
<label
  className="psds-text-input"
>
  <div
    className="psds-text-input__label psds-theme--dark psds-text-input__label"
  >
    The label
  </div>
  <div
    className="psds-text-input__field-container"
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--error psds-halo--visible-on-focus"
    >
      <div
        className="psds-text-input__field psds-text-input__field--appearance-default psds-theme--dark psds-text-input__field--error"
      >
        <input
          className="psds-theme--dark psds-text-input__field-input--appearance-default psds-text-input__field-input"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="Some placeholder"
        />
      </div>
    </div>
    <div
      className="psds-text-input__error"
    >
      <div
        className="psds-icon psds-icon--size-medium"
      >
        <svg
          aria-label="warning icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            clipRule="evenodd"
            d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 2c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8zm.5 14h-1a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5zm0-4h-1a.5.5 0 0 1-.5-.5V7a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v6.5a.5.5 0 0 1-.5.5z"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    className="psds-text-input__sub-label psds-theme--dark"
  >
    The sub label
  </div>
</label>
`;

exports[`Storyshots Components/TextInput Field After 1`] = `
<label
  className="psds-text-input"
>
  <div
    className="psds-text-input__label psds-theme--dark psds-text-input__label"
  >
    The label
  </div>
  <div
    className="psds-text-input__field-container"
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
    >
      <div
        className="psds-text-input__field psds-text-input__field--appearance-default psds-theme--dark psds-text-input__field--w-after"
      >
        <input
          className="psds-theme--dark psds-text-input__field-input--appearance-default psds-text-input__field-input"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="Some placeholder"
        />
        <div
          className="psds-icon psds-icon--size-medium"
        >
          <svg
            aria-label="placeholder icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 0 1 .9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 0 0 .9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 0 0 .9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 0 1 .9.9zM11 8.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5V11h2.5a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5H13v2.5a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5V13H8.5a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5H11V8.5z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    className="psds-text-input__sub-label psds-theme--dark"
  >
    The sub label
  </div>
</label>
`;

exports[`Storyshots Components/TextInput Label Only 1`] = `
<label
  className="psds-text-input"
>
  <div
    className="psds-text-input__label psds-theme--dark psds-text-input__label"
  >
    The label
  </div>
  <div
    className="psds-text-input__field-container"
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
    >
      <div
        className="psds-text-input__field psds-text-input__field--appearance-default psds-theme--dark"
      >
        <input
          className="psds-theme--dark psds-text-input__field-input--appearance-default psds-text-input__field-input"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="Some placeholder"
        />
      </div>
    </div>
  </div>
</label>
`;

exports[`Storyshots Components/TextInput Long Placeholder 1`] = `
<label
  className="psds-text-input"
>
  <div
    className="psds-text-input__label psds-theme--dark psds-text-input__label"
  >
    The label
  </div>
  <div
    className="psds-text-input__field-container"
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
    >
      <div
        className="psds-text-input__field psds-text-input__field--appearance-default psds-theme--dark"
      >
        <input
          className="psds-theme--dark psds-text-input__field-input--appearance-default psds-text-input__field-input"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="some placeholder that goes on forever when the little things can't handle it"
        />
      </div>
    </div>
  </div>
  <div
    className="psds-text-input__sub-label psds-theme--dark"
  >
    The sub label
  </div>
</label>
`;

exports[`Storyshots Components/TextInput No Labels 1`] = `
<label
  className="psds-text-input"
>
  <div
    className="psds-text-input__field-container"
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
    >
      <div
        className="psds-text-input__field psds-text-input__field--appearance-default psds-theme--dark"
      >
        <input
          aria-label="You need an a11y label"
          className="psds-theme--dark psds-text-input__field-input--appearance-default psds-text-input__field-input"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="Some placeholder"
        />
      </div>
    </div>
  </div>
</label>
`;

exports[`Storyshots Components/TextInput Password Input 1`] = `
<label
  className="psds-text-input"
>
  <div
    className="psds-text-input__label psds-theme--dark psds-text-input__label"
  >
    The label
  </div>
  <div
    className="psds-text-input__field-container"
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
    >
      <div
        className="psds-text-input__field psds-text-input__field--appearance-default psds-theme--dark"
      >
        <input
          className="psds-theme--dark psds-text-input__field-input--appearance-default psds-text-input__field-input"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="Some placeholder"
          type="password"
        />
      </div>
    </div>
  </div>
  <div
    className="psds-text-input__sub-label psds-theme--dark"
  >
    The sub label
  </div>
</label>
`;

exports[`Storyshots Components/TextInput Props Inclusion 1`] = `
<label
  className="psds-text-input className is allowed"
>
  <div
    className="psds-text-input__label psds-theme--dark psds-text-input__label"
  >
    The label
  </div>
  <div
    className="psds-text-input__field-container"
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
    >
      <div
        className="psds-text-input__field psds-text-input__field--appearance-default psds-theme--dark"
      >
        <input
          className="psds-theme--dark psds-text-input__field-input--appearance-default psds-text-input__field-input"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="Some placeholder"
          title="title is allowed"
        />
      </div>
    </div>
  </div>
  <div
    className="psds-text-input__sub-label psds-theme--dark"
  >
    The sub label
  </div>
</label>
`;

exports[`Storyshots Components/TextInput Sub Label Only 1`] = `
<label
  className="psds-text-input"
>
  <div
    className="psds-text-input__field-container"
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
    >
      <div
        className="psds-text-input__field psds-text-input__field--appearance-default psds-theme--dark"
      >
        <input
          aria-label="You need an a11y label"
          className="psds-theme--dark psds-text-input__field-input--appearance-default psds-text-input__field-input"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="Some placeholder"
        />
      </div>
    </div>
  </div>
  <div
    className="psds-text-input__sub-label psds-theme--dark"
  >
    The sub label
  </div>
</label>
`;

exports[`Storyshots Components/TextInput/examples Autofocused 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": "24px",
    }
  }
>
  <label
    className="psds-text-input"
  >
    <div
      className="psds-text-input__label psds-theme--dark psds-text-input__label"
    >
      The label
    </div>
    <div
      className="psds-text-input__field-container"
    >
      <div
        className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
      >
        <div
          className="psds-text-input__field psds-text-input__field--appearance-default psds-theme--dark"
        >
          <input
            className="psds-theme--dark psds-text-input__field-input--appearance-default psds-text-input__field-input"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="Some placeholder"
          />
        </div>
      </div>
    </div>
    <div
      className="psds-text-input__sub-label psds-theme--dark"
    >
      The sub label
    </div>
  </label>
</div>
`;

exports[`Storyshots Components/TextInput/examples Controlled 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": "24px",
    }
  }
>
  <div>
    <label
      className="psds-text-input"
    >
      <div
        className="psds-text-input__label psds-theme--dark psds-text-input__label"
      >
        The label
      </div>
      <div
        className="psds-text-input__field-container"
      >
        <div
          className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
        >
          <div
            className="psds-text-input__field psds-text-input__field--appearance-default psds-theme--dark"
          >
            <input
              className="psds-theme--dark psds-text-input__field-input--appearance-default psds-text-input__field-input"
              disabled={false}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Some placeholder"
              value="a value"
            />
          </div>
        </div>
      </div>
      <div
        className="psds-text-input__sub-label psds-theme--dark"
      >
        The sub label
      </div>
    </label>
    <br />
    <br />
    <div
      style={
        Object {
          "color": "rgba(255, 255, 255, 0.70)",
        }
      }
    >
      <span>
        Current value: 
        a value
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/TextInput/examples Style Full Width 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": "24px",
    }
  }
>
  <div
    style={
      Object {
        "border": "1px solid blue",
        "width": "500px",
      }
    }
  >
    <label
      className="psds-text-input"
      style={
        Object {
          "display": "block",
          "width": "100%",
        }
      }
    >
      <div
        className="psds-text-input__label psds-theme--dark psds-text-input__label"
      >
        First
      </div>
      <div
        className="psds-text-input__field-container"
      >
        <div
          className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
        >
          <div
            className="psds-text-input__field psds-text-input__field--appearance-default psds-theme--dark"
          >
            <input
              className="psds-theme--dark psds-text-input__field-input--appearance-default psds-text-input__field-input"
              disabled={false}
              style={
                Object {
                  "display": "block",
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
      </div>
    </label>
    <label
      className="psds-text-input"
      style={
        Object {
          "display": "block",
          "width": "100%",
        }
      }
    >
      <div
        className="psds-text-input__label psds-theme--dark psds-text-input__label"
      >
        Second
      </div>
      <div
        className="psds-text-input__field-container"
      >
        <div
          className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--error psds-halo--visible-on-focus"
        >
          <div
            className="psds-text-input__field psds-text-input__field--appearance-default psds-theme--dark psds-text-input__field--error"
          >
            <input
              className="psds-theme--dark psds-text-input__field-input--appearance-default psds-text-input__field-input"
              disabled={false}
              style={
                Object {
                  "display": "block",
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
        <div
          className="psds-text-input__error"
        >
          <div
            className="psds-icon psds-icon--size-medium"
          >
            <svg
              aria-label="warning icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                clipRule="evenodd"
                d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 2c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8zm.5 14h-1a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5zm0-4h-1a.5.5 0 0 1-.5-.5V7a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v6.5a.5.5 0 0 1-.5.5z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
    </label>
    <label
      className="psds-text-input"
      style={
        Object {
          "display": "block",
          "width": "100%",
        }
      }
    >
      <div
        className="psds-text-input__label psds-theme--dark psds-text-input__label"
      >
        Third
      </div>
      <div
        className="psds-text-input__field-container"
      >
        <div
          className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
        >
          <div
            className="psds-text-input__field psds-text-input__field--appearance-subtle psds-theme--dark"
          >
            <input
              className="psds-theme--dark psds-text-input__field-input--appearance-subtle psds-text-input__field-input"
              disabled={false}
              style={
                Object {
                  "display": "block",
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
      </div>
    </label>
    <label
      className="psds-text-input"
      style={
        Object {
          "display": "block",
          "width": "100%",
        }
      }
    >
      <div
        className="psds-text-input__label psds-theme--dark psds-text-input__label"
      >
        Fourth
      </div>
      <div
        className="psds-text-input__field-container"
      >
        <div
          className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--error psds-halo--visible-on-focus"
        >
          <div
            className="psds-text-input__field psds-text-input__field--appearance-subtle psds-theme--dark psds-text-input__field--error"
          >
            <input
              className="psds-theme--dark psds-text-input__field-input--appearance-subtle psds-text-input__field-input"
              disabled={false}
              style={
                Object {
                  "display": "block",
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
        <div
          className="psds-text-input__error"
        >
          <div
            className="psds-icon psds-icon--size-medium"
          >
            <svg
              aria-label="warning icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                clipRule="evenodd"
                d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 2c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8zm.5 14h-1a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5zm0-4h-1a.5.5 0 0 1-.5-.5V7a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v6.5a.5.5 0 0 1-.5.5z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots Components/TextInput/examples Style Right Aligned 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": "24px",
    }
  }
>
  <div
    style={
      Object {
        "border": "1px solid blue",
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <label
        className="psds-text-input"
      >
        <div
          className="psds-text-input__field-container"
        >
          <div
            className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
          >
            <div
              className="psds-text-input__field psds-text-input__field--appearance-default psds-theme--dark"
            >
              <input
                className="psds-theme--dark psds-text-input__field-input--appearance-default psds-text-input__field-input"
                disabled={false}
                placeholder="Filter"
              />
            </div>
          </div>
        </div>
      </label>
    </div>
    <div
      style={
        Object {
          "border": "2px dashed green",
          "height": "50px",
        }
      }
    />
  </div>
</div>
`;
